src/Resources/css/app.css
html, body{
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    font-size: 100%;
    overflow-x: hidden; 
    font-family: 'Roboto', sans-serif;
}
.wrap_head{
    width: 100%;
}

a {
    text-decoration: none;
    color: inherit;
}

.link_logo {
    display: inline-block;
}

.bck_blue {
    background: #0d1831;
}
.bck_red {
    background: red;
}

.bck_lblue {
    background: #98c5e9;
}

.img_cover {
    background-size: contain !important;
    overflow: hidden;
}
.container {
    width:1024px;
    margin: 0 auto;
    height: 900px;
}

input {
    background: #fafafa;
    border: 1px solid #e9e9e9;
    font-size: 17px;
    padding: 8px;
    border-radius: 3px;
    font-family: Roboto;
    font-weight: 300;
    width: 100%;
    box-sizing: border-box;
}

select {
    font-size: 16px;
    height: 38px;
    border: 1px solid #e9e9e9;
    border-radius: 3px;
    width: 100%;
}


button {
    background: #0d1831;
    color: #ffffff;
    border: 1px solid #0d1831;
    padding: 5px 10px;
    margin-top: 10px;
    font-size: 15px;
    border-radius: 3px;
}

.error_label {
    color: #F44336;
    font-weight: 600;
    margin: 10px 0px;
}

.success_label {
    color: #98c5e9;
    font-weight: 600;
    margin: 10px 0px;
}

.label_inputs {
    font-size: 20px;
    margin: 10px 0px;
    font-weight: 300;
    background: #e5f4ff;
    padding: 10px;
    display: inline-block;
}

.split_fields {
    margin: 30px 0px;
    padding: 20px 0px;
    border-top: 2px solid #dddddd;
}

.split_fields.last {
    margin-bottom: 0;
    padding-bottom: 0;
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    color: #cecece;
    text-align: center;
  }
  ::-moz-placeholder { /* Firefox 19+ */
    color: #cecece;
    text-align: center;
  }
  :-ms-input-placeholder { /* IE 10+ */
    color: #cecece;
    text-align: center;
  }
  :-moz-placeholder { /* Firefox 18- */
    color: #cecece;
    text-align: center;
  }


.image_upload_container {
    position: relative;
}

.image_upload_container .remove {
    top: 0;
    position: absolute;
    right: 0;
    background: #98c6e9;
    color: #ffffff;
    border: 1px solid white;
    padding: 10px;
}

.not_found_container {
    text-align: center;
    margin-top: 96px;
    padding: 20px;
    background-size: 5px 5px !important;
    min-height: 100vh;
    text-align: center;
    font-size: 90px;
    font-family: 'Righteous', cursive;
    color: #d5ebfe;
}
.wrap_head {
    width: 100% !important;
}

/*=============================
            HEADER FOOTER
===============================*/

footer {
    text-align: center;
    font-size: 16px;
    color: #ffffff;
    padding: 30px 0px;
}

footer .img_cover{
   margin:0 auto;
}

footer .footer_discl {
    margin: 10px 0px;
}


/*=============================
            FEATURED
===============================*/

.featured_wrapper {
    margin: 0 auto;
    width: 1280px;
    margin-top: 50px;
    height: 800px;
    overflow: hidden;
    position: relative;
}

.featured_stripes {
    position: relative
}
.featured_text {
    position: relative;
    font-family: 'Righteous', cursive;
}


.featured_stripes .stripe {
    width: 13%;
    height: 1200px;
    position: absolute;
}

.featured_number {
    font-size: 16em;
    color: #ffffff;
    transform: translate(20%,8em);
    position: absolute;
}

.featured_player {
    width: 100%;
    height: 550px;
    background-size: contain !important;
    background-repeat: no-repeat !important;
    position: absolute;
}
.featured_first {
    position: absolute;
    background: #0e1731;
    color: #ffffff;
    font-size: 4.5vw;
    text-transform: uppercase;
    padding: 0px 20px;
}

.featured_second {
    position: absolute;
    background: #0e1731;
    color: #ffffff;
    font-size: 4.5vw;
    text-transform: uppercase;
    padding: 0px 20px;
}

/*=============================
            MATCHES HOME
===============================*/

.home_matches_wrapper {
    background: #98c5e9;
    margin-top:9px;
    padding: 50px 0px;
}

.home_matches_wrapper .home_matches {
    flex-wrap: wrap;
    display: flex;
    margin-top: 60px;
}

.home_matches_wrapper .home_matches .item {
    width: 50%;
    margin: 35px 0px;
}

.home_matches_wrapper .home_matches .item .wrapper {
    padding-right:30px;
}


/*=============================
            MATCHES BLOCK
===============================*/

.match_block .match_date{
    color:#ffffff;
    font-size:18px;
}

.match_block .match_wrapper .match_top,
.match_block .match_wrapper .match_bottom {
    display: flex;
}
.match_block .match_wrapper .match_bottom {
    margin-top: 5px;
}

.match_block .match_wrapper .match_top .left,
.match_block .match_wrapper .match_bottom .left {
    background: #ffffff; 
    font-family: 'Righteous', cursive;
    flex-grow: 1;
    margin-right: 5px;
    padding: 10px;
}

.match_block .match_wrapper .match_top .left div,
.match_block .match_wrapper .match_bottom .left div {
    float:left
}

.match_block .match_wrapper .match_top .left .icon,
.match_block .match_wrapper .match_bottom .left .icon {
    width: 50px;
    height: 50px;
    background-size: cover !important;
}
.match_block .match_wrapper .match_top .left .team_name,
.match_block .match_wrapper .match_bottom .left .team_name {
    font-size: 30px;
    padding: 6px 10px;
}


.match_block .match_wrapper .match_top .right,
.match_block .match_wrapper .match_bottom .right { 
    background: #0e1731;
    width: 70px;
    color: #ffffff;
    font-size: 50px;
    text-align: center;
    padding-top: 6px;
} 

.match_box_big {
    width:100%;
    border-bottom: 2px solid #98c6e9;
    padding: 20px;
    box-sizing: border-box;
    height: 143px;
    clear: both;
}

.match_box_big .block_wraper {
    display: inline-block;
    margin-right: 50px;
    float: left;
}

.match_box_big .block {
    display: flex;
}

.match_box_big .icon{
    width: 50px;
    height: 50px;
    background-size: cover !important;
}
/* ... */

